// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`do.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
                                                      printWidth: 80 (default) |
=====================================input======================================
<div>
  {do {
	  1
  }}
</div>

=====================================output=====================================
<div>
  {do {
    1;
  }}
</div>;

================================================================================
`;

exports[`do.js format[acorn] 1`] = `
"Unexpected token (2:4)
  1 | <div>
> 2 |   {do {
    |    ^
  3 | 	  1
  4 |   }}
  5 | </div>
Cause: Unexpected token (2:3)"
`;

exports[`do.js format[espree] 1`] = `
"Unexpected token do (2:4)
  1 | <div>
> 2 |   {do {
    |    ^
  3 | 	  1
  4 |   }}
  5 | </div>
Cause: Unexpected token do"
`;

exports[`do.js format[meriyah] 1`] = `
"Unexpected token: 'do' (2:4)
  1 | <div>
> 2 |   {do {
    |    ^^
  3 | 	  1
  4 |   }}
  5 | </div>
Cause: [2:3-2:5]: Unexpected token: 'do'"
`;

exports[`do.js format[oxc] 1`] = `
"Unexpected token (2:4)
  1 | <div>
> 2 |   {do {
    |    ^^
  3 | 	  1
  4 |   }}
  5 | </div>"
`;

exports[`do.js format[yuku] 1`] = `
"'do' is reserved and cannot be used as an identifier (2:4)
  1 | <div>
> 2 |   {do {
    |    ^^
  3 | 	  1
  4 |   }}
  5 | </div>"
`;
